FEAT: disable, enable fields based on form changes.

--- a/site/templates/twig/items/itm/pricing/js/classes/Configs.js.twig
+++ b/site/templates/twig/items/itm/pricing/js/classes/Configs.js.twig
@@ -17,5 +17,6 @@ class PricingConfigs {
 				precision: {{ itmPricing.fieldAttribute('margin', 'precision') }}
 			},
 		};
+		this.qtyBreaks = 10;
 	}
 }
