FIX: use correct price decimal precision

--- a/site/templates/twig/items/itm/pricing/form/sales/qty-breaks/tr.twig
+++ b/site/templates/twig/items/itm/pricing/form/sales/qty-breaks/tr.twig
@@ -15,7 +15,7 @@
 %}
 {% set formatted = {
 		'qty': unit.qty|number_format(pricingm.fieldAttribute('qty', 'precision')),
-		'price': unit.price|number_format(pricingm.fieldAttribute('margin', 'precision')),
+		'price': unit.price|number_format(pricingm.fieldAttribute('price', 'precision')),
 		'margin': unit.margin|number_format(pricingm.fieldAttribute('margin', 'precision')),
 	}
 %}
