--- a/site/templates/twig/items/itm/pricing/form/sales.twig
+++ b/site/templates/twig/items/itm/pricing/form/sales.twig
@@ -20,6 +20,12 @@
 				</option>
 			{% endfor %}
 		</select>
+		<small class="form-text text-muted">
+			Conversion: &nbsp;
+			<span class="conversion-description">
+				{{ item_pricing.item.unitofmsale.conversion|number_format(pricingm.fieldAttribute('qty', 'precision')) }}
+			</span>
+		</small>
 	</div>
 </div>
 
