--- a/site/templates/twig/items/itm/pricing/js/classes/Configs.js.twig
+++ b/site/templates/twig/items/itm/pricing/js/classes/Configs.js.twig
@@ -16,6 +16,9 @@ class PricingConfigs {
 			margin: {
 				precision: {{ itmPricing.fieldAttribute('margin', 'precision') }}
 			},
+			qty: {
+				precision: {{ itmPricing.fieldAttribute('qty', 'precision') }}
+			},
 		};
 		this.qtyBreaks = 10;
 	}
