--- a/site/templates/twig/items/itm/costing/primary-vendor-item.twig
+++ b/site/templates/twig/items/itm/costing/primary-vendor-item.twig
@@ -10,12 +10,13 @@
 		<strong>Primary Vendor </strong>
 	</div>
 	<div class="col-sm-8">
-		{{ xref.vendorid }} - {{ xref.vendor.name }}
+		{{ xref.vendorid }} <br>
+		{{ xref.vendor.name }}
 	</div>
 </div>
 <div class="form-group row">
 	<div class="col-sm-4">
-		<strong>Item ID </strong> &nbsp;
+		<strong>Vendor Item</strong>
 	</div>
 	<div class="col-sm-8">
 		{{ xref.vendoritemid }}
@@ -32,10 +33,9 @@
 						'inputgroup': {
 							'type': 'append',
 							'size': 'sm',
-							'attributes': {'readonly': true},
-							'input': {
+							'p': {
 								'value': xref.getUnitCostUom(0)|number_format(m_costing.getConfigPo().decimal_places_cost),
-								'addclasses': ['text-right']
+								'addclasses': ['text-right', 'border-0']
 							},
 							'span': {
 								'text': xref.uom_purchase|spacepad(m_costing.getUomCodeLength())|raw,
@@ -56,10 +56,9 @@
 							'inputgroup': {
 								'type': 'append',
 								'size': 'sm',
-								'attributes': {'readonly': true},
-								'input': {
+								'p': {
 									'value': xref.get_unitcost(0)|number_format(m_costing.getConfigPo().decimal_places_cost),
-									'addclasses': ['text-right']
+									'addclasses': ['text-right', 'border-0']
 								},
 								'span': {
 									'text': 'EACH',
