--- a/site/templates/twig/items/itm/pricing/form/discount-assortment.twig
+++ b/site/templates/twig/items/itm/pricing/form/discount-assortment.twig
@@ -12,7 +12,7 @@
 		<label for="allow_discount">Allow Discount</label>
 	</div>
 	<div class="col-sm-8">
-		{% include 'util/select.twig' with {'name': 'allow_discount', 'id': 'allow_discount', 'selectedvalue': item_pricing.item.allow_discount, 'options': {'Y': 'Yes', 'N': 'No'}} %}
+		{% include 'util/select.twig' with {'name': 'allow_discount', 'id': 'allow_discount', 'selectedvalue': item_pricing.item.allow_discount, 'options': {'Y': 'Yes', 'N': 'No'}, 'hideblankoption': true} %}
 	</div>
 </div>
 <div class="form-group row">
