--- a/site/templates/twig/items/itm/pricing/form/purchasing.twig
+++ b/site/templates/twig/items/itm/pricing/form/purchasing.twig
@@ -7,16 +7,17 @@
 	pricingm               module ItmPricing
 	pricingm.configs       WireData
 #}
+{% set m_costing = costingm %}
 <div class="form-group row">
 	<div class="col-sm-4">
 		<label>Purchase UoM</label>
 	</div>
 	<div class="col-sm-8">
 		<p class="form-control-plaintext form-control-sm">
-			{{ item_pricing.item.unitofmpurchase.code }} - {{ item_pricing.item.unitofmpurchase.description }}
+			{{ item.unitofmpurchase.code }} - {{ item.unitofmpurchase.description }}
 		</p>
 		<small class="form-text text-muted">
-			Conversion: {{ item_pricing.item.unitofmpurchase.conversion|number_format(pricingm.fieldAttribute('qty', 'precision')) }}
+			Conversion: {{ item.unitofmpurchase.conversion|number_format(pricingm.fieldAttribute('qty', 'precision')) }}
 		</small>
 	</div>
 </div>
@@ -25,22 +26,45 @@
 		<label>Standard Cost</label>
 	</div>
 	<div class="col-sm-8">
-		<div class="input-group input-group-sm">
-			<input type="text" class="form-control-plaintext text-right pr-2" name="standardcost" value="{{ item_pricing.item.standardcost|number_format(4) }}" readonly>
-			<div class="input-group-append">
-				<div class="input-group-text">{{ item_pricing.item.unitofmpurchase.code }}</div>
+		<div class="row mb-2">
+			<div class="col-sm-8">
+				{% include 'util/bootstrap/form/input-group.twig' with {
+						'inputgroup': {
+							'type': 'append',
+							'size': 'sm',
+							'p': {
+								'value': (item.standardcost * item.unitofmpurchase.conversion)|number_format(costingm.getConfigPo().decimal_places_cost),
+								'addclasses': ['text-right', 'border-0']
+							},
+							'span': {
+								'text': item.unitofmpurchase.code|spacepad(costingm.getUomCodeLength())|raw,
+								'addclasses': ['text-monospace']
+							}
+						}
+					}
+				%}
+			</div>
+			<div class="col-sm-4">
+				<p class="form-control-plaintext form-control-sm">{{ item.date_laststandardcost ? item.date_laststandardcost|convertdate : '' }}</p>
 			</div>
 		</div>
-	</div>
-</div>
-<div class="form-group row">
-	<div class="col-sm-4">
-	</div>
-	<div class="col-sm-8">
-		<div class="input-group input-group-sm">
-			<input type="text" class="form-control-plaintext text-right pr-2" value="{{ item_pricing.item.get_standardcost_uom_sale()|number_format(4) }}" readonly>
-			<div class="input-group-append">
-				<div class="input-group-text">{{ item_pricing.item.unitofmsale.code }}</div>
+		<div class="row">
+			<div class="col-sm-8">
+				{% include 'util/bootstrap/form/input-group.twig' with {
+						'inputgroup': {
+							'type': 'append',
+							'size': 'sm',
+							'p': {
+								'value': item.standardcost|number_format(costingm.getConfigPo().decimal_places_cost),
+								'addclasses': ['text-right', 'border-0']
+							},
+							'span': {
+								'text': 'EACH',
+								'addclasses': ['text-monospace']
+							}
+						}
+					}
+				%}
 			</div>
 		</div>
 	</div>
@@ -51,76 +75,43 @@
 		<label>Last Cost</label>
 	</div>
 	<div class="col-sm-8">
-		<div class="input-group input-group-sm">
-			<input type="text" class="form-control-plaintext text-right pr-2" value="{{ item_pricing.item.lastcost|number_format(4) }}" readonly>
-			<div class="input-group-append">
-				<div class="input-group-text">{{ item_pricing.item.unitofmpurchase.code }}</div>
+		<div class="row">
+			<div class="col-sm-8">
+				<div class="mb-2">
+					{% include 'util/bootstrap/form/input-group.twig' with {
+							'inputgroup': {
+								'type': 'append',
+								'size': 'sm',
+								'p': {
+									'value': item.lastcost|number_format(costingm.getConfigPo().decimal_places_cost),
+									'addclasses': ['text-right', 'border-0']
+								},
+								'span': {
+									'text': item.unitofmpurchase.code|spacepad(costingm.getUomCodeLength())|raw,
+									'addclasses': ['text-monospace']
+								}
+							}
+						}
+					%}
+				</div>
+
+				{% include 'util/bootstrap/form/input-group.twig' with {
+						'inputgroup': {
+							'type': 'append',
+							'size': 'sm',
+							'p': {
+								'value': (item.lastcost / item.unitofmpurchase.conversion)|number_format(costingm.getConfigPo().decimal_places_cost),
+								'addclasses': ['text-right', 'border-0']
+							},
+							'span': {
+								'text': 'EACH'|spacepad(costingm.getUomCodeLength())|raw,
+								'addclasses': ['text-monospace']
+							}
+						}
+					}
+				%}
 			</div>
 		</div>
 	</div>
 </div>
-<div class="form-group row">
-	<div class="col-sm-4">
-	</div>
-	<div class="col-sm-8">
-		<div class="input-group input-group-sm">
-			<input type="text" class="form-control-plaintext text-right pr-2" value="{{ item_pricing.item.get_standardcost_uom_sale()|number_format(4) }}" readonly>
-			<div class="input-group-append">
-				<div class="input-group-text">{{ item_pricing.item.unitofmsale.code }}</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="form-group row">
-	<div class="col-sm-4">
-		<label>Last Cost Date</label>
-	</div>
-	<div class="col-sm-8">
-		<input type="text" class="form-control-plaintext text-right pr-2" value="{{ item_pricing.item.date_lastcost|convertdate }}" readonly>
-	</div>
-</div>
-<div class="form-group row">
-	<div class="col-sm-4">
-		<label>Primary Vendor</label>
-	</div>
-	<div class="col-sm-2">
-		<input type="text" class="form-control-plaintext" value="{{ item_pricing.item.primaryvxm.vendorid }}" readonly>
-	</div>
-	<div class="col-sm-6">
-		<p class="form-control-plaintext">{{ item_pricing.item.primaryvxm.vendor.name }}</p>
-	</div>
-</div>
-<div class="form-group row">
-	<div class="col-sm-4">
-		<label>Vendor Item</label>
-	</div>
-	<div class="col-sm-8">
-		<input type="text" class="form-control-plaintext" value="{{ item_pricing.item.primaryvxm.vendoritemid }}" readonly>
-	</div>
-</div>
-<div class="form-group row">
-	<div class="col-sm-4">
-		<label>Unit Cost</label>
-	</div>
-	<div class="col-sm-8">
-		<div class="input-group input-group-sm">
-			<input type="text" class="form-control-plaintext text-right pr-2" value="{{ item_pricing.primaryvxm.unitcost ?  item_pricing.primaryvxm.unitcost|number_format(4) : '0.00'|number_format(4) }}" readonly>
-			<div class="input-group-append">
-				<div class="input-group-text">{{ item_pricing.item.unitofmpurchase.code }}</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="form-group row">
-	<div class="col-sm-4">
-		<label></label>
-	</div>
-	<div class="col-sm-8">
-		<div class="input-group input-group-sm">
-			<input type="text" class="form-control-plaintext text-right pr-2" value="{{ item_pricing.primaryvxm.get_listprice_uom_sale() ?  item_pricing.primaryvxm.get_listprice_uom_sale()|number_format(4) : '0.00'|number_format(4) }}" readonly>
-			<div class="input-group-append">
-				<div class="input-group-text">{{ item_pricing.item.unitofmsale.code  }}</div>
-			</div>
-		</div>
-	</div>
-</div>
+{% include 'items/itm/costing/primary-vendor-item.twig' %}
