--- a/site/templates/twig/items/itm/pricing/form/discount-assortment.twig
+++ b/site/templates/twig/items/itm/pricing/form/discount-assortment.twig
@@ -23,7 +23,9 @@
 		<select name="assortmentcode" class="custom-select custom-select-sm" id="assortmentcode">
 			<option value=""></option>
 			{% for assortment in pricingm.get_assortmentcodes() %}
-				<option value="{{ assortment.code }}" {{ assortment.code == item_pricing.item.assortmentcode ? 'selected' : ''}}>{{ assortment.description }}</option>
+				<option value="{{ assortment.code }}" {{ assortment.code == item_pricing.item.assortmentcode ? 'selected' : ''}}>
+					{{ assortment.code }} - {{ assortment.description }}
+				</option>
 			{% endfor %}
 		</select>
 	</div>
