--- a/site/templates/twig/items/itm/costing/js/classes/Configs.js.twig
+++ b/site/templates/twig/items/itm/costing/js/classes/Configs.js.twig
@@ -17,7 +17,10 @@ class CostingConfigs {
 				precision: {{ costing.getConfigPo().decimal_places_cost }}
 			},
 			margin: {
-				precision: 4
+				precision: {{ costing.fieldAttribute('margin', 'precision') }}
+			},
+			qty: {
+				precision: {{ costing.fieldAttribute('qty', 'precision') }}
 			},
 		};
 	}
