--- a/site/templates/twig/items/itm/pricing/form.twig
+++ b/site/templates/twig/items/itm/pricing/form.twig
@@ -12,6 +12,7 @@
 	<input type="hidden" name="action" value="update-itm-pricing">
 	<input type="hidden" name="itemID" value="{{ item_pricing.itemid }}">
 	<input type="hidden" name="baseprice" value="{{ item_pricing.baseprice }}">
+	<input type="hidden" name="standardcost" value="{{ item.standardcost }}">
 
 	<div class="row mb-3">
 		<div class="col-sm-6">
