II Display Logic changes
Create II\Base Controller Class

REFACTOR: use Mii\Ii namespace call individual classes

Add subfunctions initHooks function to Ii\Ii

Change Ii\Item to Ii\Ii

Update ii-item.php

Use Purl URI Manipulation Library

USE \d\.\s to remove number off sections

REFACTOR

REFACTOR: separate logic from display

Separeate Logic from display

Update ii-item.php

FIX: displays

Update bread-crumbs.twig

--- a/site/templates/twig/items/ii/documents/list.twig
+++ b/site/templates/twig/items/ii/documents/list.twig
@@ -7,6 +7,13 @@
 			<th>Date</th>
 			<th>Time</th>
 		</tr>
+		{% if list.documents.count() == 0 %}
+			<tr>
+				<td colspan="5" class="bg-warning text-white text-center">
+					No Documents Found
+				</td>
+			</tr>
+		{% endif %}
 		{% for document in list.documents %}
 			<tr id="doc-{{ document.filename }}">
 				<td>{{ document.title }}</td>
