FIX: itm-pricing assortment qty precision
FIX: add assortment qty precision

Update Configs.js.twig

--- a/site/templates/twig/items/itm/pricing/form/discount-assortment.twig
+++ b/site/templates/twig/items/itm/pricing/form/discount-assortment.twig
@@ -35,6 +35,6 @@
 		<label for="assortmentqty">Assortment Qty</label>
 	</div>
 	<div class="col-sm-8">
-		<input type="text" class="form-control form-control-sm text-right" name="assortmentqty" id="assortmentqty" value="{{ item_pricing.item.assortmentqty}}">
+		<input type="text" class="form-control form-control-sm text-right" name="assortmentqty" id="assortmentqty" value="{{ item_pricing.item.assortmentqty|number_format(pricingm.fieldAttribute('assortmentqty', 'precision')) }}">
 	</div>
 </div>
