--- a/site/templates/twig/items/itm/pricing/js/classes/Configs.js.twig
+++ b/site/templates/twig/items/itm/pricing/js/classes/Configs.js.twig
@@ -19,6 +19,9 @@ class PricingConfigs {
 			qty: {
 				precision: {{ itmPricing.fieldAttribute('qty', 'precision') }}
 			},
+			assortmentqty: {
+				precision: {{ itmPricing.fieldAttribute('assortmentqty', 'precision') }}
+			},
 		};
 		this.qtyBreaks = 10;
 	}
