FIX: Show Unit of Sales Conversion

--- a/site/templates/twig/items/itm/costing/pricing.twig
+++ b/site/templates/twig/items/itm/costing/pricing.twig
@@ -15,7 +15,7 @@
 				<small class="form-text text-muted">
 					Conversion: &nbsp;
 					<span>
-						{{ item.unitofmpurchase.conversion|number_format(m_costing.fieldAttribute('qty', 'precision')) }}
+						{{ item.unitofmsale.conversion|number_format(m_costing.fieldAttribute('qty', 'precision')) }}
 					</span>
 				</small>
 			</div>
