--- a/site/templates/twig/code-tables/mpo/cnfm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/js/classes/Form.js.twig
@@ -10,6 +10,7 @@ class CnfmForm {
 
 	constructor() {
 		this.id = 'code-form';
+		this.form = $('#' + this.id);
 		this.inputs = CnfmInputs.getInstance();
 		// this.config = CnfmConfig.getInstance();
 	}
