--- a/site/templates/twig/code-tables/mpo/cnfm/js/classes.js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/js/classes.js.twig
@@ -1,3 +1,4 @@
+{% include 'code-tables/mpo/cnfm/js/classes/Configs.js.twig' %}
 {% include 'code-tables/mpo/cnfm/js/classes/Requests.js.twig' %}
 {% include 'code-tables/mpo/cnfm/js/classes/Alerts.js.twig' %}
 {% include 'code-tables/mpo/cnfm/js/classes/Inputs.js.twig' %}
