--- a/site/templates/twig/items/itm/bread-crumbs.twig
+++ b/site/templates/twig/items/itm/bread-crumbs.twig
@@ -55,13 +55,13 @@
 				{% if lastsegment == 'xrefs' %}
 					<i class="fa fa-arrows" aria-hidden="true"></i>
 				{% endif %}
-				{{ lastsegment|title }}
+				{{ lastsegment == 'xrefs' ? 'X-Refs' : lastsegment|title }}
 			</li>
 		{% endif %}
 	{% elseif segments[1] == 'xrefs' %}
 		<li class="breadcrumb-item">
 			<a href="{{ page.itmUrlFunction(values.text('itemID'), 'xrefs') }}">
-				<i class="fa fa-arrows" aria-hidden="true"></i> {{ 'X-refs'|title }}
+				<i class="fa fa-arrows" aria-hidden="true"></i> {{ 'X-Refs'|title }}
 			</a>
 		</li>
 		<li class="breadcrumb-item active" aria-current="page">
