--- a/site/templates/twig/items/itm/misc/js.twig
+++ b/site/templates/twig/items/itm/misc/js.twig
@@ -1,2 +1,14 @@
 {% include 'items/itm/misc/form/misc.js.twig' %}
 {% include 'items/itm/misc/form/hazmat.js.twig' %}
+
+$(function() {
+
+/* =============================================================
+	Event Changes
+============================================================= */
+	$('body').on('keyup change paste', 'input, select, textarea', function(){
+		if ($('#response-alert').length) {
+			$('#response-alert').remove();
+		}
+	});
+});
