--- a/site/templates/twig/items/itm/misc/form/hazmat.twig
+++ b/site/templates/twig/items/itm/misc/form/hazmat.twig
@@ -140,7 +140,7 @@
 			</div>
 			<div class="form-group row">
 				<div class="col-sm-4">
-					<label for="allowair">Packing Group</label>
+					<label for="allowair">Allow Air</label>
 				</div>
 				<div class="col-sm-3">
 					{% include 'util/form/select.twig' with {
