--- a/site/templates/twig/items/itm/misc/form/misc/form.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/form.twig
@@ -5,16 +5,16 @@
 	item                   ItemMasterItem
 	itm                    module ItmMisc
 #}
-<form action="{{ page.wire('input').url() }}" class="mb-3" id="item-misc-form" method="post">
+<form action="{{ page.wire('input').url() }}" class="mb-3" id="itm-misc-form" method="post">
 	<input type="hidden" name="action" value="update-itm-misc">
 	<input type="hidden" name="itemID" value="{{ item.itemid }}">
 
 	<div class="row">
 		<div class="col-sm-8">
-			{% include 'items/itm/misc/form/misc-left.twig' %}
+			{% include 'items/itm/misc/form/misc/left.twig' %}
 		</div>
 		<div class="col-sm-4">
-			{% include 'items/itm/misc/form/misc-right.twig' %}
+			{% include 'items/itm/misc/form/misc/right.twig' %}
 		</div>
 	</div>
 
