USE itm-misc-form

--- a/site/templates/twig/items/itm/misc/form/misc/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/js/classes/Form.js.twig
@@ -9,8 +9,13 @@ class MiscForm {
 	}
 
 	constructor() {
-		this.id = 'itm-costing-form';
+		this.id = 'itm-misc-form';
 		this.form = $('#' + this.id);
 		this.inputs = MiscInputs.getInstance();
+		this.validator = MiscFormValidator.getInstance();
+	}
+
+	init() {
+		this.validator.setForm(this.form);
 	}
 }
