--- a/site/templates/twig/items/itm/misc/form/misc/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/js/classes/Inputs.js.twig
@@ -9,7 +9,7 @@ class MiscInputs {
 	}
 
 	constructor() {
-		this.id   = 'itm-costing-form';
+		this.id   = 'itm-misc-form';
 		this.form = $('#' + this.id);
 		this.country  = this.form.find('input[origincountry]');
 		this.tariff   = this.form.find('input[name=tariffcode]');
