--- a/site/templates/twig/items/itm/misc/form/misc/js.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/js.twig
@@ -9,54 +9,60 @@ $(function() {
 /* =============================================================
 	Validation Functions
 ============================================================= */
-	var validator_misc = formMisc.form.validate({
-			errorClass: "is-invalid",
-			validClass: "is-valid",
-			errorPlacement: function(error, element) {
-				error.insertAfter(element).addClass('invalid-feedback');
-			},
-			rules: {
-				tariffcode: {
-					required: false,
-					remote: function() {
-						return object_validate_remote_code('inv', 'tariffcode', 'tariff-code');
-					}
-				},
-				origincountry: {
-					required: false,
-					remote: function() {
-						return object_validate_remote_code('inv', 'origincountry', 'country-code');
-					}
-				},
-				freightcode: {
-					required: false,
-					remote: function() {
-						return object_validate_remote_code('mso', 'freightcode', 'freight-code');
+	var validatorMisc = formMisc.form.validate({
+		errorClass: "is-invalid",
+		validClass: "is-valid",
+		errorPlacement: function(error, element) {
+			error.insertAfter(element).addClass('invalid-feedback');
+		},
+		rules: {
+			tariffcode: {
+				required: false,
+				remote: {
+					url: '{{ page.jsonapiURL('inv/validate/tariff-code/') }}',
+					type: "get",
+					data: {
+						jqv: 'true',
+						code: function() {
+							return $('#tariffcode').val();
+						}
 					}
 				}
 			},
-			messages: {
-
+			origincountry: {
+				required: false,
+				remote: {
+					url: '{{ page.jsonapiURL('inv/validate/country-code/') }}',
+					type: "get",
+					data: {
+						jqv: 'true',
+						code: function() {
+							return $('#origincountry').val();
+						}
+					}
+				}
 			},
-			submitHandler: function(form) {
-				form.submit();
-			}
-		});
-
-		function object_validate_remote_code(api, inputid, validating) {
-			var url = URI('{{ page.jsonapiURL() }}');
-			url.path(url.path()+api+'/validate/'+validating+'/');
-
-			return {
-				url: url.toString(),
-				type: "get",
-				data: {
-					code: function() {
-						return $('#'+inputid).val();
+			freightcode: {
+				required: false,
+				remote: {
+					url: '{{ page.jsonapiURL('mso/validate/freight-code/') }}',
+					type: "get",
+					data: {
+						jqv: 'true',
+						code: function() {
+							return $('#freightcode').val();
+						}
 					}
 				}
 			}
+		},
+		messages: {
+
+		},
+		submitHandler: function(form) {
+			form.submit();
 		}
+	});
 
 /* =============================================================
 	Event Functions
