FIX: use margin precision for uom conversion display

--- a/site/templates/twig/items/itm/costing/form.twig
+++ b/site/templates/twig/items/itm/costing/form.twig
@@ -25,7 +25,7 @@
 			<small class="form-text text-muted">
 				Conversion: &nbsp;
 				<span class="conversion-description">
-					{{ item.unitofmpurchase.conversion|number_format(m_costing.fieldAttribute('cost', 'precision')) }}
+					{{ item.unitofmpurchase.conversion|number_format(m_costing.fieldAttribute('margin', 'precision')) }}
 				</span>
 			</small>
 		</div>
