--- a/site/templates/twig/items/itm/pricing/form/sales.twig
+++ b/site/templates/twig/items/itm/pricing/form/sales.twig
@@ -23,7 +23,7 @@
 		<small class="form-text text-muted">
 			Conversion: &nbsp;
 			<span class="conversion-description">
-				{{ item_pricing.item.unitofmsale.conversion|number_format(pricingm.fieldAttribute('qty', 'precision')) }}
+				{{ item_pricing.item.unitofmsale.conversion|number_format(pricingm.fieldAttribute('margin', 'precision')) }}
 			</span>
 		</small>
 	</div>
