--- a/site/templates/twig/items/itm/costing/js/classes/Configs.js.twig
+++ b/site/templates/twig/items/itm/costing/js/classes/Configs.js.twig
@@ -14,7 +14,7 @@ class CostingConfigs {
 				maxlength: {{ costing.getUomCodeLength() }}
 			},
 			cost: {
-				precision: {{ costing.getConfigPo().decimal_places_cost }}
+				precision: {{ costing.fieldAttribute('cost', 'precision')  }}
 			},
 			margin: {
 				precision: {{ costing.fieldAttribute('margin', 'precision') }}
