--- a/site/templates/twig/items/itm/pricing/form/purchasing.twig
+++ b/site/templates/twig/items/itm/pricing/form/purchasing.twig
@@ -33,7 +33,7 @@
 							'type': 'append',
 							'size': 'sm',
 							'p': {
-								'value': (item.standardcost * item.unitofmpurchase.conversion)|number_format(costingm.getConfigPo().decimal_places_cost),
+								'value': (item.standardcost * item.unitofmpurchase.conversion)|number_format(m_costing.fieldAttribute('cost', 'precision')),
 								'addclasses': ['text-right', 'border-0']
 							},
 							'span': {
@@ -55,7 +55,7 @@
 							'type': 'append',
 							'size': 'sm',
 							'p': {
-								'value': item.standardcost|number_format(costingm.getConfigPo().decimal_places_cost),
+								'value': item.standardcost|number_format(m_costing.fieldAttribute('cost', 'precision')),
 								'addclasses': ['text-right', 'border-0']
 							},
 							'span': {
@@ -83,7 +83,7 @@
 								'type': 'append',
 								'size': 'sm',
 								'p': {
-									'value': item.lastcost|number_format(costingm.getConfigPo().decimal_places_cost),
+									'value': item.lastcost|number_format(m_costing.fieldAttribute('cost', 'precision')),
 									'addclasses': ['text-right', 'border-0']
 								},
 								'span': {
@@ -100,7 +100,7 @@
 							'type': 'append',
 							'size': 'sm',
 							'p': {
-								'value': (item.lastcost / item.unitofmpurchase.conversion)|number_format(costingm.getConfigPo().decimal_places_cost),
+								'value': (item.lastcost / item.unitofmpurchase.conversion)|number_format(m_costing.fieldAttribute('cost', 'precision')),
 								'addclasses': ['text-right', 'border-0']
 							},
 							'span': {
