--- a/site/templates/twig/items/itm/misc/js.twig
+++ b/site/templates/twig/items/itm/misc/js.twig
@@ -1,14 +1,16 @@
-{% include 'items/itm/misc/form/misc.js.twig' %}
-{% include 'items/itm/misc/form/hazmat.js.twig' %}
+{% include 'items/itm/misc/form/misc/js.twig' %}
+{% include 'items/itm/misc/form/hazmat/js.twig' %}
 
 $(function() {
 
 /* =============================================================
 	Event Changes
 ============================================================= */
-	$('body').on('keyup change paste', 'input, select, textarea', function(){
-		if ($('#response-alert').length) {
-			$('#response-alert').remove();
+	$('body').on('keyup change paste', 'input, select, textarea', function() {
+		console.log('yes');
+		if ($('.response-alert').length) {
+			console.log('yes');
+			$('.response-alert').remove();
 		}
 	});
 });
