--- a/site/templates/twig/items/itm/response-alert.twig
+++ b/site/templates/twig/items/itm/response-alert.twig
@@ -8,6 +8,6 @@
 {% set title = response.has_error() ? 'Error!' : 'Success!' %}
 
 
-<div id="response-alert" class="mb-3">
+<div id="" class="mb-3 response-alert">
 	{% include 'util/form/alert.twig' with {'type': type, 'iconclass': iconclass, 'title': title, 'message': response.message, 'fields': response.fields } %}
 </div>
