--- a/site/templates/twig/items/itm/misc/form/hazmat/form.twig
+++ b/site/templates/twig/items/itm/misc/form/hazmat/form.twig
@@ -5,7 +5,7 @@
 	item                   ItemMasterItem
 	itm                    module ItmMisc
 #}
-<form action="{{ input.url() }}" class="mb-3" id="item-hazmat-form" method="post">
+<form action="{{ input.url() }}" class="mb-3" id="itm-hazmat-form" method="post">
 	<input type="hidden" name="action" value="update-itm-hazmat">
 	<input type="hidden" name="itemID" value="{{ item.itemid }}">
 
